feat: update to v2.13